fixes preview styling a bit (spacing)

--- a/src/styles.css
+++ b/src/styles.css
@@ -1018,6 +1018,10 @@ section h1 {
   width: 75px;
   padding-bottom: 10px;
 }
+
+.shareNow {
+  margin-bottom: 50px;
+}
 .demo a {
   z-index: 2;
   display: inline-block;
@@ -1047,6 +1051,7 @@ section h1 {
   display: flex;
   flex-direction: column;
   font : normal 400 18px/1 'Josefin Sans', sans-serif;
+  margin-bottom: 50px;
 }
 .infoSpan {
   margin-top: 20px;
